--- a/assest/css/style.css
+++ b/assest/css/style.css
@@ -22,16 +22,33 @@ img {
 
 
 .right {
-    color: white;
+    color: rgba(0, 0, 0, 0.411);
     position: absolute;
-    right: 0;
+    right: 5px;
     top: 180px;
+    font-size: 30px;
 }
 
 
 .left {
-    color: white;
+    color: rgba(0, 0, 0, 0.411);
     position: absolute;
-    left: 0;
+    left: 5px;
     top: 180px;
+    font-size: 30px;
 }
+
+.right:hover{
+
+    font-size: 35px;
+    color: rgba(135, 135, 135, 0.37);
+    transition: 0.4s;
+}
+
+.left:hover{
+
+    font-size: 35px;
+    color: rgba(135, 135, 135, 0.37);
+    transition: 0.4s;
+}
+
